tests/macro-tests/cases/widget/unknown_inherit.stderr
error[E0412]: cannot find type `UnknownType` in this scope
 --> cases/widget/unknown_inherit.rs:4:23
  |
4 | pub struct TestWidget(UnknownType);
  |                       ^^^^^^^^^^^ not found in this scope

error[E0599]: no method named `widget_intrinsic` found for struct `TestWidget` in the current scope
 --> cases/widget/unknown_inherit.rs:3:1
  |
3 | #[widget($crate::TestWidget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | method not found in `TestWidget`
  | method `widget_intrinsic` not found for this struct
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `widget_intrinsic`, perhaps you need to implement it:
          candidate #1: `WidgetImpl`
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)
help: trait `WidgetImpl` which provides `widget_intrinsic` is implemented but not in scope; perhaps you want to import it
  |
1 + use zng::widget::WidgetImpl;
  |
