tests/macro-tests/cases/widget/unknown_inherit.rs
use zng::prelude_wgt::widget;

#[widget($crate::TestWidget)]
pub struct TestWidget(UnknownType);

fn main() {}
